# RFM

./: .gitignore  README.md  config.json  config_manager.py  extractor_factory.py  gpt2_extractor.py  project_layout.py  pyproject.toml  report_plots.py  run_pipeline.py  runner.py  steer_runner.py  train_runner.py
base/: __init__.py  dataloader.py  extractor.py
cli/: analyze.py  deception_autointerp.py  deception_cycle.py  deception_report.py  extract.py  extract_deception.py  extract_generate.py  pattern_score.py  pipeline.py  safety_score.py  steer.py  train.py
configs/models/: config.example.json  gpt2-small.emotion.json  qwen3-0.6B.deception.json  qwen3-0.6B.safety-gen.json  qwen3-0.6B.safety.json  turkish-gpt2.emotion.json
models/gpt2/: __init__.py  extractor.py
models/hf_causal/: __init__.py  extractor.py
rfm/: __init__.py  config.py  layout.py
rfm/analysis/: __init__.py  autointerp.py  clustering.py  crosslingual.py
rfm/dashboard/: app.py
rfm/data/: __init__.py  deception_dataset.py  loader.py  prompt_augmenter.py
rfm/deception/: __init__.py  adversarial_search.py  deception_autointerp.py  deception_dataset.py  deception_monitor.py  deception_probe.py  direction_finder.py  reporting.py  scenario_generator.py  utils.py
rfm/extractors/: __init__.py  hf_causal.py  hf_generate.py  transformer_lens.py
rfm/patterns/: __init__.py  bundle.py  data.py  discovery.py  intervention.py  modeling.py  paths.py  spec.py
rfm/sae/: __init__.py  crosscoder.py  gsae.py  mapping.py  matryoshka.py  model.py  train.py
rfm/safety/: __init__.py  classifier.py  contrastive.py  cross_layer.py  deception_evaluator.py  score_validator.py
rfm/steering/: __init__.py  hook.py  patching.py
rfm/viz/: __init__.py  plots.py
sae/: mapping.py  model.py  train.py
steering/: __init__.py  emotion_probe.py  patching.py
tests/: test_analysis.py  test_config.py  test_contrastive_labels.py  test_dashboard_app.py  test_deception_autointerp_cli.py  test_deception_cycle.py  test_deception_dataset.py  test_deception_direction.py  test_deception_monitor.py  test_deception_report.py  test_extract_deception.py  test_model_configs.py  test_pattern_pipeline_integration.py  test_patterns.py  test_pipeline.py  test_project_layout.py  test_sae_model.py  test_scenario_generator.py  test_steering_and_viz.py  test_train_cli.py
