[project]
name = "rfm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.4,<2.7",
    "transformers>=4.57.6,<5",
    "transformer-lens @ git+https://github.com/TransformerLensOrg/TransformerLens",
    "matplotlib>=3.10.0",
    "ipython>=8.38.0",
    "tqdm>=4.66.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
