[project]
name = "rfm"
version = "0.1.0"
description = "GPT-2 Residual Feature Mapping with SAE for Mechanistic Interpretability"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "datasets>=2.20,<4",
    "torch>=2.4,<2.7",
    "transformers>=4.57.6,<5",
    "transformer-lens @ git+https://github.com/TransformerLensOrg/TransformerLens",
    "matplotlib>=3.10.0",
    "ipython>=8.38.0",
    "tqdm>=4.66.0",
    "openai>=2.29.0",
    "tomli>=2.0; python_version < '3.11'",
    "streamlit>=1.55.0",
    "plotly>=6.6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
dashboard = ["streamlit>=1.30", "plotly>=5.18"]
autointerp = ["openai>=1.0", "scikit-learn>=1.4", "pandas>=2.0", "scipy>=1.11"]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
